--- a/src/main/resources/db/cms/DB2JccConfiguration.properties
+++ b/src/main/resources/db/cms/DB2JccConfiguration.properties
@@ -1,3 +1,5 @@
+# Move to folder src/main/resources to take effect.
+
 db2.jcc.override.traceDirectory=/tmp
 db2.jcc.override.traceFile=ferb.trc
 db2.jcc.override.traceFileAppend=true
