revert changed data

--- a/config/shiro_v2-local.ini
+++ b/config/shiro_v2-local.ini
@@ -6,8 +6,7 @@ allowAllCredentialsMatcher = org.apache.shiro.authc.credential.AllowAllCredentia
 # Perry Realm
 # -------------
 perryRealm = gov.ca.cwds.security.realm.PerryRealm
-#perryRealm.validationUri = http://localhost:8080/perry/authn/validate
-perryRealm.validationUri = https://web.preint.cwds.io/perry/authn/validate
+perryRealm.validationUri = http://localhost:8080/perry/authn/validate
 #perryRealm.validationUri = ${AUTH_VALIDATION_URL:-http://localhost:8080/perry/authn/validate}
 
 perryRealm.credentialsMatcher = $allowAllCredentialsMatcher
@@ -31,4 +30,4 @@ securityManager.realm = $perryRealm
 /token* = noSession, anon
 #/** = noSession, anon
 #enable security
-/** = noSession, perry
+#/** = noSession, perry
