--- a/docker/ferb-test/config/testConfig.yml
+++ b/docker/ferb-test/config/testConfig.yml
@@ -12,14 +12,14 @@ defaultUsers:
        username: '{ "user": "BRADYG", "staffId": "aaw", "roles": [ "SocialWorker" ], "county_code": "17", "county_cws_code": "1084", "county_name": "Lake", "privileges": [ "CWS Case Management System" ] }'
        password: ${PASSWORD:-}
     -  userType: countySensitivePrivilegeUser
-       username: ${USERNAME:-}
+       username: '{ "user": "BRADYP", "staffId": "aax", "roles": [ "SocialWorker" ], "county_code": "17", "county_cws_code": "1084", "county_name": "Lake", "privileges": [ "CWS Case Management System", "Sensitive Persons" ] }'
        password: ${PASSWORD:-}
     -  userType: countySealedPrivilegeUser
-       username: ${USERNAME:-}
+       username: '{ "user": "CLUSTR", "staffId": "0UX", "roles": [ "SocialWorker" ], "county_code": "34", "county_cws_code": "1101", "county_name": "Sacramento", "privileges": [ "CWS Case Management System", "Sealed" ] }'
        password: ${PASSWORD:-}
     -  userType: stateSensitivePrivilegeUser
-       username: ${USERNAME:-}
+       username: '{ "user": "TESTIE", "staffId": "0RG", "roles": [ "Supervisor" ], "county_code": "99", "county_cws_code": "1126", "county_name": "State of California", "privileges": [ "Sensitive Persons" ] }'
        password: ${PASSWORD:-}
     -  userType: stateSealedPrivilegeUser
-       username: ${USERNAME:-}
+       username: '{ "user": "BURNSM", "staffId": "0MJ", "roles": [ "SocialWorker" ], "county_code": "99", "county_cws_code": "1126", "county_name": "State of California", "privileges": [ "Sealed", "CWS Case Management System" ] }'
        password: ${PASSWORD:-}
