--- a/build.gradle
+++ b/build.gradle
@@ -97,8 +97,8 @@ shadowJar {
 jar {
     manifest {
         attributes 'Main-Class': mainClassName
-        attributes 'Api-Version': System.getProperty($newTag)	
-        attributes 'Api-Build': (System.getenv("BUILD_NUMBER") ?: "IDE")
+        //attributes 'Api-Version': System.getProperty($newTag)	
+        //attributes 'Api-Build': (System.getenv("BUILD_NUMBER") ?: "IDE")
     }
 }
 
