--- a/build.gradle
+++ b/build.gradle
@@ -62,9 +62,13 @@ compileJava {
     ]
 }
 
-def newVersion = "${System.setPropert('newTag')}"
-def dockerTag = (newVersion == '') ? apiVersion : newVersion
-version = (newVersion == '') ? apiVersion : newVersion
+if (System.getProperty('newVersion')) {
+ def newVersion = "${System.getProperty('newVersion')}.${System.getProperty('build')}"
+ version = newVersion
+} else {
+ version = apiVersion
+}
+def dockerTag = apiVersion + ((System.properties.getProperty('build') != null ) ? '.' + System.properties.getProperty('build') : '')
 mainClassName = mainclass
 
 repositories {
@@ -98,7 +102,7 @@ shadowJar {
 jar {
     manifest {
         attributes 'Main-Class': mainClassName
-        attributes 'Api-Version': (newVersion == '') ? apiVersion : newVersion	
+        attributes 'Api-Version': version	
         attributes 'Api-Build': (System.getenv("BUILD_NUMBER") ?: "IDE")
     }
 }
