--- a/src/test/resources/config/test-api.yml
+++ b/src/test/resources/config/test-api.yml
@@ -89,16 +89,16 @@ xaCmsDataSourceFactory:
   xaDataSourceClassName: org.h2.jdbcx.JdbcDataSource
   validationQuery:
   logValidationErrors: true
-  initialSize: ${DB_CMS_CP_INITIAL_SIZE:-2}
-  minSize: ${DB_CMS_CP_MIN_SIZE:-2}
-  maxSize: ${DB_CMS_CP_MAX_SIZE:-20}
+  initialSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+  minSize: ${DB_CMSXA_CP_MIN_SIZE:-2}
+  maxSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
   minIdleTime: 1 minute
-  maxConnectionAge: ${DB_CMS_MAX_AGE}
-  removeAbandoned: ${DB_CMS_REMOVE_ABANDONED:-false}
-  removeAbandonedTimeout: ${DB_CMS_REMOVE_ABANDONED_TIMEOUT:-60}
-  commitOnReturn: ${DB_CMS_COMMIT_ON_RETURN:-false}
-  checkConnectionWhileIdle: ${DB_CMS_CHECK_CONNECTION_WHILE_IDLE:-true}
-  checkConnectionOnBorrow: ${DB_CMS_CHECK_CONNECTION_ON_BORROW:-false}
+  maxConnectionAge: ${DB_CMSXA_MAX_AGE}
+  removeAbandoned: ${DB_CMSXA_REMOVE_ABANDONED:-false}
+  removeAbandonedTimeout: ${DB_CMSXA_REMOVE_ABANDONED_TIMEOUT:-60}
+  commitOnReturn: ${DB_CMSXA_COMMIT_ON_RETURN:-false}
+  checkConnectionWhileIdle: ${DB_CMSXA_CHECK_CONNECTION_WHILE_IDLE:-true}
+  checkConnectionOnBorrow: ${DB_CMSXA_CHECK_CONNECTION_ON_BORROW:-false}
   properties:
       hibernate.dialect: org.hibernate.dialect.H2Dialect
       hibernate.show_sql: ${FERB_HIBERNATE_SHOW_SQL:-false}
