--- a/src/test/resources/config/test-api.yml
+++ b/src/test/resources/config/test-api.yml
@@ -93,7 +93,7 @@ xaCmsDataSourceFactory:
   minSize: ${DB_CMSXA_CP_MIN_SIZE:-2}
   maxSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
   minIdleTime: 1 minute
-  maxConnectionAge: ${DB_CMSXA_MAX_AGE}
+  maxConnectionAge: ${DB_CMSXA_MAX_AGE:-30s}
   removeAbandoned: ${DB_CMSXA_REMOVE_ABANDONED:-false}
   removeAbandonedTimeout: ${DB_CMSXA_REMOVE_ABANDONED_TIMEOUT:-60}
   commitOnReturn: ${DB_CMSXA_COMMIT_ON_RETURN:-false}
