SNAP-896: Change Settings in API to Help Resolve Table Lock Issue

--- a/config/api.yml
+++ b/config/api.yml
@@ -57,7 +57,7 @@ cmsDataSourceFactory:
   minIdleTime: 1 minute
   maxConnectionAge: ${DB_CMS_MAX_AGE:-30s}
   removeAbandoned: ${DB_CMS_REMOVE_ABANDONED:-false}
-  removeAbandonedTimeout: ${DB_CMS_REMOVE_ABANDONED_TIMEOUT:-60}
+  removeAbandonedTimeout: ${DB_CMS_REMOVE_ABANDONED_TIMEOUT:-60s}
   commitOnReturn: ${DB_CMS_COMMIT_ON_RETURN:-false}
   checkConnectionWhileIdle: ${DB_CMS_CHECK_CONNECTION_WHILE_IDLE:-true}
   checkConnectionOnBorrow: ${DB_CMS_CHECK_CONNECTION_ON_BORROW:-false}
@@ -89,7 +89,7 @@ rsDataSourceFactory:
   minIdleTime: 1 minute
   maxConnectionAge: ${DB_CWSRS_MAX_AGE:-30s}
   removeAbandoned: ${DB_CWSRS_REMOVE_ABANDONED:-false}
-  removeAbandonedTimeout: ${DB_CWSRS_REMOVE_ABANDONED_TIMEOUT:-60}
+  removeAbandonedTimeout: ${DB_CWSRS_REMOVE_ABANDONED_TIMEOUT:-60s}
   commitOnReturn: ${DB_CWSRS_COMMIT_ON_RETURN:-false}
   checkConnectionWhileIdle: ${DB_CWSRS_CHECK_CONNECTION_WHILE_IDLE:-true}
   checkConnectionOnBorrow: ${DB_CWSRS_CHECK_CONNECTION_ON_BORROW:-false}
@@ -122,7 +122,7 @@ xaCmsDataSourceFactory:
   minIdleTime: 1 minute
   maxConnectionAge: ${DB_CMSXA_MAX_AGE:-30s}
   removeAbandoned: ${DB_CMS_REMOVE_ABANDONED:-false}
-  removeAbandonedTimeout: ${DB_CMSXA_REMOVE_ABANDONED_TIMEOUT:-60}
+  removeAbandonedTimeout: ${DB_CMSXA_REMOVE_ABANDONED_TIMEOUT:-60s}
   commitOnReturn: ${DB_CMSXA_COMMIT_ON_RETURN:-false}
   checkConnectionWhileIdle: ${DB_CMSXA_CHECK_CONNECTION_WHILE_IDLE:-true}
   checkConnectionOnBorrow: ${DB_CMSXA_CHECK_CONNECTION_ON_BORROW:-false}
@@ -167,7 +167,7 @@ xaCmsRsDataSourceFactory:
   minIdleTime: 1 minute
   maxConnectionAge: ${DB_CWSRSXA_MAX_AGE:-30s}
   removeAbandoned: ${DB_CWSRSXA_REMOVE_ABANDONED:-false}
-  removeAbandonedTimeout: ${DB_CWSRSXA_REMOVE_ABANDONED_TIMEOUT:-60}
+  removeAbandonedTimeout: ${DB_CWSRSXA_REMOVE_ABANDONED_TIMEOUT:-60s}
   commitOnReturn: ${DB_CWSRSXA_COMMIT_ON_RETURN:-false}
   checkConnectionWhileIdle: ${DB_CWSRSXA_CHECK_CONNECTION_WHILE_IDLE:-true}
   checkConnectionOnBorrow: ${DB_CWSRSXA_CHECK_CONNECTION_ON_BORROW:-false}
