--- a/config/api.yml
+++ b/config/api.yml
@@ -49,7 +49,7 @@ cmsDataSourceFactory:
   user: ${DB_CMS_USER}
   password: ${DB_CMS_PASSWORD}
   url: ${DB_CMS_JDBC_URL}
-  validationQuery:
+  validationQuery: "/* CMS DB2 Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
   logValidationErrors: true
   initialSize: ${DB_CMS_CP_INITIAL_SIZE:-2}
   minSize: ${DB_CMS_CP_MIN_SIZE:-2}
@@ -81,7 +81,7 @@ rsDataSourceFactory:
   user: ${DB_CWSRS_USER}
   password: ${DB_CWSRS_PASSWORD}
   url: ${DB_CWSRS_JDBC_URL}
-  validationQuery:
+  validationQuery: "/* RS DB2 Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
   logValidationErrors: true
   initialSize: ${DB_CWSRS_CP_INITIAL_SIZE:-2}
   minSize: ${DB_CWSRS_CP_MIN_SIZE:-2}
@@ -114,7 +114,7 @@ xaCmsDataSourceFactory:
   password: ${DB_CMS_PASSWORD}
   url: ${DB_CMS_JDBC_URL}
   xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
-  validationQuery:
+  validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
   logValidationErrors: true
   initialSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
   minSize: ${DB_CMSXA_CP_MIN_SIZE:-2}
@@ -159,7 +159,7 @@ xaCmsRsDataSourceFactory:
   password: ${DB_CWSRS_PASSWORD}
   url: ${DB_CWSRS_JDBC_URL}
   xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
-  validationQuery:
+  validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
   logValidationErrors: true
   initialSize: ${DB_CWSRSXA_CP_INITIAL_SIZE:-2}
   minSize: ${DB_CWSRSXA_CP_MIN_SIZE:-2}
