FIT-357 Apply the new shared library for smoke testing to Ferb API & move Selenium Login support to API Core

--- a/docker/ferb-test/config/testConfig.yml
+++ b/docker/ferb-test/config/testConfig.yml
@@ -1,4 +1,4 @@
-authenticationMode: TEST
+authenticationMode: ${AUTH_MODE:-TEST}
 testUrl:
    baseUrl: ${BASE_URL}
    perryLoginUrl: ${PERRY_LOGIN_URL}
