FIT-357 Apply the new shared library for smoke testing to Ferb API & move Selenium Login support to API Core

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ mainClassName = mainclass
 repositories {
    mavenLocal()
     maven {
-        url "http://sonar.dev.cwds.io:8081/artifactory/repo"
+        url "http://pr.dev.cwds.io/artifactory/repo"
     }
     mavenCentral()
 }
