--- a/DockerfileIntegrationTest
+++ b/DockerfileIntegrationTest
@@ -1,4 +1,4 @@
-FROM java
+FROM cwds/javajdk
 
 ENV DEBIAN_FRONTEND noninteractive
 ENV JMETER_VERSION 3.3
@@ -9,23 +9,19 @@ ENV TEST_PATH /integrationTest
 ENV JPGC_JSON_PLUGIN_FILE jpgc-json-2.6.zip
 ENV JPGC_JSON_PLUGIN_DOWNLOAD_URL https://jmeter-plugins.org/files/packages/${JPGC_JSON_PLUGIN_FILE}
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends curl tar ca-certificates unzip && \
-    apt-get clean autoclean && \
-    apt-get autoremove --yes && \
-    rm -rf /var/lib/{apt,dpkg,cache,log}/
-
-RUN mkdir -p ${JMETER_HOME} && \
-    curl -L --silent ${JMETER_DOWNLOAD_URL} | tar -xz --strip=1 -C ${JMETER_HOME} && \
-    curl -L --silent http://jmeter-plugins.org/downloads/file/JMeterPlugins-Standard-1.2.1.zip -o /tmp/jmeter-plugins-standard.zip && \
-    unzip -o -d /opt/jmeter/ /tmp/jmeter-plugins-standard.zip && \
-    rm /tmp/jmeter-plugins-standard.zip
+RUN yum -y install wget
+RUN yum -y install unzip
+RUN mkdir -p ${JMETER_HOME} \
+    && cd ${JMETER_HOME} \
+    && wget ${JMETER_DOWNLOAD_URL} \
+    && tar -xvzf apache-jmeter-${JMETER_VERSION}.tgz \
+    && rm apache-jmeter-${JMETER_VERSION}.tgz
 
 WORKDIR ${JMETER_HOME}
 
-run curl -L --silent ${JPGC_JSON_PLUGIN_DOWNLOAD_URL} -o ${JMETER_HOME}/${JPGC_JSON_PLUGIN_FILE} && \
-    unzip -o -d ${JMETER_HOME}/ ${JMETER_HOME}/${JPGC_JSON_PLUGIN_FILE} && \
-    rm ${JMETER_HOME}/${JPGC_JSON_PLUGIN_FILE}
+RUN wget ${JPGC_JSON_PLUGIN_DOWNLOAD_URL} \
+    && unzip -o -d ${JMETER_HOME}/ ${JMETER_HOME}/${JPGC_JSON_PLUGIN_FILE} \
+    && rm ${JMETER_HOME}/${JPGC_JSON_PLUGIN_FILE}
 
 RUN mkdir -p $TEST_PATH
 WORKDIR $TEST_PATH
