--- a/build.gradle
+++ b/build.gradle
@@ -189,6 +189,7 @@ dependencies {
 	compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.9'
     compile group: "org.postgresql", name: "postgresql", version: "9.4.1208.jre7"
     compile group: 'org.json', name: 'json', version: '20090211'
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
 
     // Distributed XA transactions:
     compile group: 'com.atomikos', name: 'atomikos-util', version: '4.0.6'
