--- a/build.gradle
+++ b/build.gradle
@@ -180,7 +180,7 @@ dependencies {
 	compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.25.1'
 	compile group: 'com.hubspot.dropwizard', name: 'dropwizard-guice', version: '1.0.6.0'
 
-	compile 'com.fasterxml.jackson.module:jackson-module-guice:2.8.2'
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
 	compile group: 'org.secnod.dropwizard', name: 'dropwizard-shiro', version: '0.2.0'
 
     compile fileTree(dir: 'lib', include: ['*.jar'])
