--- a/config/api.yml
+++ b/config/api.yml
@@ -145,13 +145,13 @@ xaCmsDataSourceFactory:
       hibernate.cache.provider_class: org.hibernate.cache.NoCacheProvider
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
-      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
-      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
-      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
-      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
-      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
-      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
-      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
+#      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+#      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
+#      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
+#      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
+#      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
+#      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
+#      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
   xaProperties:
       # Properties for DB2XADataSource
       serverName: ${DB_CMS_HOST:-localhost}
@@ -197,13 +197,13 @@ xaCmsRsDataSourceFactory:
       hibernate.cache.provider_class: org.hibernate.cache.NoCacheProvider
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
-      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
-      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
-      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
-      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
-      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
-      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
-      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
+#      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+#      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
+#      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
+#      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
+#      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
+#      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
+#      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
   xaProperties:
       # Properties for DB2XADataSource
       serverName: ${DB_CMS_HOST:-localhost}
@@ -243,13 +243,13 @@ xaNsDataSourceFactory:
       connection.blockingReadConnectionTimeout: 90
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
-      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
-      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
-      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
-      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
-      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
-      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
-      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
+#      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+#      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
+#      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
+#      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
+#      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
+#      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
+#      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
   xaProperties:
       url: ${DB_NS_JDBC_URL}
 
