--- a/src/test/resources/config/test-api.yml
+++ b/src/test/resources/config/test-api.yml
@@ -115,13 +115,13 @@ xaCmsDataSourceFactory:
       hibernate.cache.use_second_level_cache: false
       connection.timerLevelForQueryTimeOut: 2
       connection.blockingReadConnectionTimeout: 120
-      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
-      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
-      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
-      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
-      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
-      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
-      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
+#      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+#      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
+#      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
+#      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
+#      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
+#      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
+#      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
   xaProperties:
       url: jdbc:h2:mem:cwsint;INIT=create schema if not exists cwsint\;set schema cwsint
 
@@ -156,13 +156,13 @@ xaCmsRsDataSourceFactory:
       hibernate.cache.use_second_level_cache: false
       connection.timerLevelForQueryTimeOut: 2
       connection.blockingReadConnectionTimeout: 120
-      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
-      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
-      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
-      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
-      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
-      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
-      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
+#      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+#      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
+#      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
+#      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
+#      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
+#      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
+#      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
   xaProperties:
       url: jdbc:h2:mem:cwsrs1;INIT=create schema if not exists cwsrs1\;set schema cwsrs1
 
@@ -196,13 +196,13 @@ xaNsDataSourceFactory:
       hibernate.cache.use_second_level_cache: false
       connection.timerLevelForQueryTimeOut: 2
       connection.blockingReadConnectionTimeout: 120
-      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
-      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
-      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
-      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
-      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
-      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
-      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
+#      minPoolSize: ${DB_CMSXA_CP_INITIAL_SIZE:-2}
+#      maxPoolSize: ${DB_CMSXA_CP_MAX_SIZE:-20}
+#      reapTimeout: ${DB_CMSXA_REAP_TIMEOUT:-300}
+#      maxIdleTime: ${DB_CMSXA_MAX_IDLE:-30}
+#      maxLifetime: ${DB_CMSXA_LIFETIME:-60}
+#      maintenanceInterval: ${DB_CMSXA__MAINT_INTERVAL:-60}
+#      borrowConnectionTimeout: ${DB_CMSXA_BORROW_TIME:-30}
   xaProperties:
       url: jdbc:h2:mem:intakens;INIT=create schema if not exists intakens\;set schema intakens
 
