DS-3128: DB2 program information

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -4,7 +4,7 @@ appender.console.layout.type = PatternLayout
 
 
 log4j.appender.jdbcLog=org.apache.log4j.RollingFileAppender
-log4j.appender.jdbcLog.File=log/jdbc.log
+log4j.appender.jdbcLog.File=logs/jdbc.log
 log4j.appender.jdbcLog.Threshold=DEBUG
 log4j.appender.jdbcLog.MaxFileSize=10MB
 log4j.appender.jdbcLog.MaxBackupIndex=20
