--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ applicationDefaultJvmArgs = ["-Djava.library.path=.:./lib:/var/lib/jenkins/works
 project.ext {
     coreApiVersion = '1.19.2_938-RC'
     apiVersion = '0.9.3'
-    cwdsModelVersion = '0.11.2_717-RC'
+    cwdsModelVersion = '3.17.2'
     configPath = '$rootProject.projectDir/config/'
     dropwizardVersion = '1.1.0'
     dropwizardFlywayVersion = '1.0.0-1'
