CMO-99: user trace log

--- a/config/shiro.ini
+++ b/config/shiro.ini
@@ -35,7 +35,7 @@ securityManager.realm = $perryRealm
 
 [urls]
 /system-information = noSession, anon
-/trace_log_search = noSession, anon
+/trace_log_search/** = noSession, anon
 /application = noSession, anon
 /static/** = noSession, anon
 /swagger* = noSession, anon
