--- a/config/shiro_v2.ini
+++ b/config/shiro_v2.ini
@@ -22,7 +22,7 @@ securityManager.cacheManager = $cacheManager
 securityManager.realm = $perryRealm
 
 [urls]
-/trace_log_search = noSession, anon
+/trace_log_search/** = noSession, anon
 /system-information = noSession, anon
 /application = noSession, anon
 /admin/** = noSession, anon
