CMO-99: user trace log

--- a/config/shiro_v2.ini
+++ b/config/shiro_v2.ini
@@ -22,8 +22,9 @@ securityManager.cacheManager = $cacheManager
 securityManager.realm = $perryRealm
 
 [urls]
-/trace_log_search/** = noSession, anon
 /system-information = noSession, anon
+/trace_log_search/** = noSession, anon
+/trace_log_search** = noSession, anon
 /application = noSession, anon
 /admin/** = noSession, anon
 /static/** = noSession, anon
