--- a/config/shiro.ini
+++ b/config/shiro.ini
@@ -36,6 +36,7 @@ securityManager.realm = $perryRealm
 [urls]
 /system-information = noSession, anon
 /trace_log_search/** = noSession, anon
+/trace_log_search** = noSession, anon
 /application = noSession, anon
 /static/** = noSession, anon
 /swagger* = noSession, anon
