--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,7 @@
 version: "2"
+prepare:
+  fetch: 
+    - "https://raw.githubusercontent.com/checkstyle/checkstyle/master/src/main/resources/google_checks.xml"
 checks:
   argument-count:
     enabled: true
